# keeping-less-is-more

./: CMakeLists.txt  Dependencies.md  README.md  build.sh  scoring.py
Sample/RGB-D/: rgbd_scan.cc  test_scan.sh  test_scan_localization.sh
Sample/RGB-D/setting/: ScanNet0.yaml  ScanNet0_locCull.yaml  ScanNet0_locOri.yaml
Sample/Stereo/: stereo_euroc.cc  test_euroc.sh
include/: BoostArchiver.h  Converter.h  Frame.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  MatchCuller.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  MatchCuller.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc
